<resources>
    <string name="app_name">FoodAlert</string>

    <string name="pref_Account">Acct</string>
    <string name="pref_UID">UID</string>
    <string name="pref_Fname">Fname</string>
    <string name="pref_Mname">Mname</string>
    <string name="pref_Lname">Lname</string>
    <string name="pref_Username">User</string>
    <string name="pref_Password">Pass</string>
    <string name="pref_Email">Email</string>
    <string name="pref_code">Code</string>
    <string name="food_allergen">Food Allergen</string>

    <string name="pref_KeepMeLogin">KeepLogin</string>
    <string name="pref_Notification">Notify</string>

    <string name="str_scan_foodproducts">Scan Food</string>
    <string name="str_camera">Capture</string>
    <string name="str_findplace">Find Place</string>
    <string name="str_foodlist">Food Allergen</string>
    <string name="str_contact">Contacts</string>
    <string name="str_allergylist">Food Allergens</string>

    <string name="action_settings">Settings</string>
    <string name="createaccount">Create Account</string>
    <string name="editeaccount">Edit Account</string>
    <string name="manage_account">Manage Account</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="keeplogin">Keep me login</string>
    <string name="login">Login</string>
    <string name="user_information">User Information</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="login_information">Login Information</string>
    <string name="user_verification">User Verification</string>
    <string name="user_email">User Email</string>
    <string name="verification_code">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="successfully">Successfully!</string>
    <string name="verify">Verify</string>
    <string name="notification">Notification</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="upload_data">Upload Data</string>
    <string name="gallery">Gallery</string>
    <string name="ingredients_photo">Image of Food Names</string>
    <string name="scan_ingredients">Scan Ingredients</string>
    <string name="action_back">Back</string>
    <string name="check_for_family">Check Availability for Family</string>
    <string name="relation">Relation</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_information">Contact Information</string>
    <string name="save">Save</string>
    <string name="family_member">Family Member</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="height">Height (foot)</string>
    <string name="weight">Weight (kilo)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="edit_account">Edit Account</string>
    <string name="done">Done</string>
    <string name="select_allergies">Select Allergies</string>
    <string name="cows_milk_allergy">Cow\'s Milk</string>
    <string name="egg_allergy">Egg</string>
    <string name="tree_nuts_allergy">Tree Nuts</string>
    <string name="peanut_allergy">Peanut</string>
    <string name="shellfish_allergy">Shellfish</string>
    <string name="wheat_allergy">Wheat</string>
    <string name="soy_allergy">Soy</string>
    <string name="fish_allergy">Fish</string>

    <string name="cowsmilkinfo">A cow\'s milk allergy mostly affects children under the age of three. A diagnosis of cow\'s milk allergy means that all milk and milk products must be avoided.</string>
    <string name="egginfo">The most common type of egg allergy is an egg white allergy. The treatment is an egg-free diet. However, some people may be able to reintroduce some foods containing cooked eggs into their diet.</string>
    <string name="treenutinfo">A tree nut allergy is one of the most common food allergies. It\'s frequently associated with severe allergic reactions, and the treatment is usually a lifelong avoidance of all tree nuts and tree nut products.</string>
    <string name="peanutinfo">A peanut allergy is a serious condition that can cause a severe allergic reaction. Treatment is lifelong avoidance of peanuts and peanut-containing products.</string>
    <string name="shellfishinfo">The most common trigger of a shellfish allergy is a protein called tropomyosin. The only treatment for a shellfish allergy is removing all shellfish from your diet.</string>
    <string name="wheatinfo">A wheat allergy can be caused by a sensitivity to any of the hundreds of proteins in wheat. The only treatment is a wheat-free diet, but many people outgrow it before they reach school age.</string>
    <string name="soyinfo">A soy allergy is triggered by the proteins in soybeans and soybean products. If you have a soy allergy, the only treatment is the removal of soy from your diet.</string>
    <string name="fishinfo">Fish allergies are common, but they may be confused with an adverse reaction to contaminated fish.</string>
    <string name="age">Age</string>
    <string name="members_informtion">Member\'s Informtion</string>
    <string name="pregnant">Pregnant</string>
    <string name="no">No</string>
    <string name="registered">REGISTERED</string>
    <string name="yes">Yes</string>
    <string name="re_send">Resend Verification Code</string>
    <string name="check_allergies">Check Allergies</string>
    <string name="recommended_intake">Recommended Intake</string>
    <string name="list_of_allergy">List of Allergy</string>
    <string name="scan_nutriontions">Scan Nutritions</string>
    <string name="scan_image">Scan Image</string>
    <string name="delete">Delete</string>
    <string name="check_result">Check Result</string>
    <string name="no_connection">No Connection</string>
    <string name="and_try">and try again</string>
    <string name="please_connect_to_internet">Please connect to internet</string>
    <string name="please_check_internet_connectivity">Please check your internet connectivity</string>

    <string name="no_offline_data_available">No Offline Data</string>
</resources>
