<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/rlSplashScreen"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/size_button_large"
            android:layout_height="@dimen/size_button_large"
            android:layout_marginTop="30dp"
            android:src="@mipmap/icon_applogo"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fontsize_title"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rlLoginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/rlSplashScreen">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/username"
            android:inputType="textCapSentences|textPersonName"
            android:maxLength="25"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/password"
            android:maxLength="25"
            android:singleLine="true"
            android:drawableEnd="@drawable/icon_visibility_off"
            android:inputType="textPassword"/>

        <CheckBox

            android:id="@+id/cbKeepLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textColor="@color/colorPrimaryDark"
            android:checked="false"
            android:buttonTint="@color/colorAccent"
            android:text="@string/keeplogin" />

        <Button
            android:onClick="OnCLick_Login"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:background="@drawable/bg_primarydark"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCreate"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:onClick="OnClick_CreateAccount"
        android:text="@string/createaccount" />
</RelativeLayout>