<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/size_button_normal"
            android:layout_height="@dimen/size_button_normal"
            android:layout_weight="1"
            android:src="@mipmap/icon_contact"
            android:onClick="OnClick_Contact"/>
        <ImageView
            android:layout_width="@dimen/size_button_normal"
            android:layout_height="@dimen/size_button_normal"
            android:layout_weight="1"
            android:src="@mipmap/icon_camera"
            android:onClick="OnClick_Camera"/>
        <ImageView
            android:layout_width="@dimen/size_button_normal"
            android:layout_height="@dimen/size_button_normal"
            android:layout_weight="1"
            android:src="@mipmap/icon_ingredients"
            android:onClick="OnClick_Ingredients"/>
        <ImageView
            android:layout_width="@dimen/size_button_normal"
            android:layout_height="@dimen/size_button_normal"
            android:layout_weight="1"
            android:src="@mipmap/icon_pharmacy"
            android:onClick="OnClick_Pharmacy"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:text="@string/str_contact"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:text="@string/str_scan_foodproducts"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:text="@string/str_foodlist"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:singleLine="false"
            android:textColor="@color/colorWhite"
            android:text="@string/str_findplace"/>
    </LinearLayout>

</LinearLayout>